1. fixed limits on Entities and Plates
2. Introduced TargetNotSupports exception
3. Put order in Plates
4. Where Like in Entities and Plates