@@ -33,7 +33,7 @@ public class Plate extends HashMap<String, Map<String, Object>> implements JsonM
             setValue(c, rowResults[i]);
         }
     }
-    public Plate(Entity entity) {
+    public Plate(ColumnsProvider entity) {
         this.fields = entity.columns();
         for (int i = 0; i < fields.size(); i++) {
             TableColumn c = fields.get(i);
